move themecolor variable and fix bug menu on mobile view

--- a/assets/css/3-sections/5-menu/_menu.scss
+++ b/assets/css/3-sections/5-menu/_menu.scss
@@ -35,9 +35,12 @@ $col-1: calc(var(--i)*(var(--q)*#{$hno-w} + var(--p)*#{$ico-w}) + var(--j)*2em);
   koho, trebuchet ms, verdana, century gothic, arial, sans-serif;
 
   @media (max-width: $art-w + 2*$art-x) {
-    .artikel{
+    .artikel {
       grid-template: unset;
       transform: unset;
+      &:before {
+        width: unset;
+      }
     }
     .option:after{
       left: calc(var(--i)*(var(--p)*(100% - 0.375rem) - var(--s)*0.875rem) + var(--j)*25%);
@@ -102,7 +105,8 @@ $col-1: calc(var(--i)*(var(--q)*#{$hno-w} + var(--p)*#{$ico-w}) + var(--j)*2em);
     position: absolute;
     bottom: -.25*$art-h;
     left: calc(var(--q)*(100% - #{$art-s}) + var(--s)*#{.2*$art-s});
-    width: $art-s; height: .5*$art-h;
+    width: $art-s;
+    height: .5*$art-h;
     border-radius: 50%;
     transform: translatez(-1px) rotate(calc(var(--s)*5deg));
     background: rgba(#000, .2);
